annotate models and add import routes for resources

--- a/test/fixtures/markets.yml
+++ b/test/fixtures/markets.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: markets
+#
+#  id                    :integer          not null, primary key
+#  equity_turnover       :float
+#  market_capitalization :float
+#  created_at            :datetime
+#  updated_at            :datetime
+#  guid                  :string(255)
+#  published_at          :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
