--- a/test/fixtures/banks.yml
+++ b/test/fixtures/banks.yml
@@ -1,3 +1,19 @@
+# == Schema Information
+#
+# Table name: banks
+#
+#  id               :integer          not null, primary key
+#  volume           :integer
+#  high             :float
+#  low              :float
+#  war              :float
+#  window_borrowing :integer
+#  created_at       :datetime
+#  updated_at       :datetime
+#  guid             :string(255)
+#  published_at     :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
