--- a/test/fixtures/changers.yml
+++ b/test/fixtures/changers.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: changers
+#
+#  id                :integer          not null, primary key
+#  security          :string(255)
+#  price             :float
+#  percentage_change :float
+#  created_at        :datetime
+#  updated_at        :datetime
+#  guid              :string(255)
+#  published_at      :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
