--- a/test/fixtures/forexes.yml
+++ b/test/fixtures/forexes.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: forexes
+#
+#  id           :integer          not null, primary key
+#  currency     :string(255)
+#  buy          :float
+#  sell         :float
+#  mean         :float
+#  created_at   :datetime
+#  updated_at   :datetime
+#  guid         :string(255)
+#  published_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
