--- a/test/fixtures/movers.yml
+++ b/test/fixtures/movers.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: movers
+#
+#  id           :integer          not null, primary key
+#  mover        :string(255)
+#  volume       :integer
+#  created_at   :datetime
+#  updated_at   :datetime
+#  guid         :string(255)
+#  published_at :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
