--- a/test/fixtures/share_indices.yml
+++ b/test/fixtures/share_indices.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: share_indices
+#
+#  id                 :integer          not null, primary key
+#  all_share_index    :float
+#  twenty_share_index :float
+#  created_at         :datetime
+#  updated_at         :datetime
+#  guid               :string(255)
+#  published_at       :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
